www/sites/all/themes/lynchburg/css/global.css
/* ... */
.main-menu .active {
	text-decoration:underline;
}
.main-menu a:hover {
	color:#454545;
}
.main-menu a {
	margin:1px 1px 0 1px;
	padding:3px 6px 8px;
}
.main-menu a.qtip-hover{
	-webkit-border-top-right-radius:3px;
	-webkit-border-top-left-radius: 3px;
	-moz-border-radius-topleft: 3px;
	-moz-border-radius-topright: 3px;
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
	border:1px solid #ccc;
	border-bottom:none;
	margin:0;
	background:#fff;
}
ul.main-menu li {
	padding:0;
}

/* ========== MAIN NAV DROPDOWN ========== */
.qtip {
	border:none;
}
.qtip-wrapper {
	-moz-box-shadow: 3px 3px 6px #dddedf;
	-webkit-box-shadow: 3px 3px 6px #dddedf;
	box-shadow: 3px 3px 6px #dddedf;
	/* For IE 8 */

	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf')";
	/* For IE 5.5 - 7 */
	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf');
	-moz-border-radius-bottomright:8px;
	-webkit-border-bottom-right-radius:8px;
	-moz-border-radius-bottomleft:8px;
	-webkit-border-bottom-left-radius:8px;
}
/*.qtip-wrapper.qtip-contentWrapper{
	border:#dddedf solid 3px;
}*/

#mini-panel-undergraduate_megamenu, #mini-panel-graduate_megamenu, #mini-panel-student_life_megamenu, #mini-panel-alumni_megamenu, #mini-panel-athletics_megamenu {
	margin:20px;
	line-height:14px;
	font-size:1em;
}
.menu-minipanels .pane-title, .pane-node-field-links .pane-title {
	font-size:1.333em;
	line-height:1em;
	color:#900900;
}
#mini-panel-undergraduate_megamenu ul, #mini-panel-graduate_megamenu ul, #mini-panel-student_life_megamenu ul, #mini-panel-alumni_megamen ul, #mini-panel-athletics_megamen ul {
	/*list-style:none;*/
	/*line=height:1em;*/
	margin:0;
	padding:0;
}
#mini-panel-undergraduate_megamenu li, #mini-panel-graduate_megamenu li, #mini-panel-student_life_megamenu li, #mini-panel-alumni_megamen li, #mini-panel-athletics_megamen li {
	list-style:none;
	padding:10px 40px 0 0;
}
/* ========== ASIDE & SECONDARY NAV ========== */
.field-name-field-aside {
	margin-left:0px;
	padding-left:0px;
	border-left:#e8e8e8 double 3px;
	overflow:visible;
}
.pane-ct-page-lc-section-nav {
	margin:0px;
	padding-right:0px;
	border-right:#e8e8e8 double 3px;
	overflow:visible;
}
h2.pane-title {
	font-size:1.333em; /*16px*/
	background:none;
	line-height:1.2em;
	margin-bottom:.75em;
	color:#242424
}
.field-name-field-aside ul, .pane-ct-page-lc-section-nav .pane-content ul {
	/*border-top:#c3c3c3  dotted 1.75px;*/
	background:url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x top;
}
.field-name-field-aside ul li, .pane-ct-page-lc-section-nav .pane-content ul li {
	background:url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x bottom;
	/*border-bottom:#c3c3c3  dotted 1.25px;*/
	padding:0.74em 0 0.74em 1.5em;
	position:relative;
	list-style:none;
	margin:0;
}
.field-name-field-aside ul li:hover:after, field-name-field-aside ul li .after:hover, .pane-ct-page-lc-section-nav .pane-content ul li:hover:after, .pane-ct-page-lc-section-nav .pane-content ul li .after:hover {
	background-position:0 0;
}
.field-name-field-aside ul li:after, .field-name-field-aside ul li .after, .pane-ct-page-lc-section-nav li:after, .pane-ct-page-lc-section-nav li .after {
	background-image:url("/sites/all/themes/lynchburg/images/circle_list.png");
	background-repeat:no-repeat;
	background-position:0 -30px;
	position:absolute;
	content:"";
	after:"&nbsp;";
	top:0.75em;
	left:0;
	list-style:none;
	height:16px;
	width:16px;
}
.field-name-field-aside li:hover:after, .field-name-field-aside li .after:hover, .pane-ct-page-lc-section-nav .pane-content li:hover:after, .pane-ct-page-lc-section-nav .pane-content li .after:hover {
	background-position:0 0;
}
.field-name-field-aside .field-item h2, .field-name-field-aside .field-item h3 {
	font-size:1.333em; /*16px*/
	line-height:20px;
	margin-bottom:.5em;
}
.field-name-field-aside .field-item h2, .field-name-field-aside .field-item h3 {
	color:#900900;
}
.field-name-field-aside .field-item h4, .field-name-field-aside .field-item h5 {
	font-size:14px;
	line-height:18px;
	margin-bottom:0.2em;
}
li.parent.last.open ul, li.parent.open ul, li.parent.open li {
	background-image:none;
	line-height:15px;
	padding:4px 0px 4px 8px;
}
li.parent.last.open ul li:after, li.parent.last.open li .after, li.parent.open ul li:after, li.parent.open ul li .after {
	background-image:none;
}
/* ========== BLOCKQUOTES ========== */
blockquote {
	font-family: Georgia, "Times New Roman", Times, serif;
	font-size:1.333em; /*16px*/
	border-left:4px solid #115482;
	font-style: italic;
	color: #303030;
	line-height: 1.5em;
	margin-bottom:1em;
	padding:0 0 0 1em;

}
/* ========== QUOTES ========== */

.quoteBox-big {
	padding:0;
	margin-bottom:-25px;
}
.quote-author {
	margin-top:10px;
	text-align:right;
	font-style:italic;
	font-size:1em; /*12px*/
	color:#ff7706;
}
.quote-text {
	font-family:Georgia, "Times New Roman", Times, serif;
	color:#303030;
	font-style:italic;
	font-size:1.333em; /*16px*/
	font-weight:normal;
	line-height:1.4em;
}
/* ========== IMAGE & BORDERS ========== */
.image, .imageTopLeft, .imageTopRight, .imageLeft, .imageRight, .imageCenter {
	padding:3px;
	background:#fff;
	-moz-box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8), -1px -1px 3px rgba(230, 230, 230, 0.8);
	-webkit-box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8), -1px -1px 3px rgba(230, 230, 230, 0.8);
	box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8), -1px -1px 3px rgba(230, 230, 230, 0.8);
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	position:relative;
	behavior: url(js/PIE.htc);
}
.image:hover, .imageTopLeft:hover, .imageTopRight:hover, .imageLeft:hover, .imageRight:hover, .imageCenter:hover {
	background:#e0e1e0;
	;
	-moz-transition: all 0.2s linear 0s;
	-webkit-transition: all 0.2s linear 0s;
	-o-transition: all 0.2s linear 0s;
}
.imageTopLeft {
	float:left;
	margin:4px 20px 10px 0;
}
/* ... */

